added atom and rss feed

--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -7,3 +7,7 @@
   <% end %>
   </ul>
 </div>
+
+<% content_for :head, auto_discovery_link_tag(:atom, media_url(format: "atom")) %>
+
+<%= link_to "rss", media_url(format: "atom") %>
