--- a/app/views/media/show.html.erb
+++ b/app/views/media/show.html.erb
@@ -1,18 +1,28 @@
-
-<%= link_to 'Back to sermon list', media_path %>
-<h2><%= @medium.title %></h2>
-<p>
-  <audio controls>
-  <source src=<%= @medium.link %> type="audio/mpeg">
-  Unfortunately, your browser does not support the audio element.
-</audio>
-</p>
-
-<div>
-  More sermons on <%= @medium.pillar.upcase %>
-  <ul>
-  <% @media.each do |medium| %>
-    <li><%= link_to medium.title + ": a sermon on " + medium.pillar.upcase, medium  %></li>
-  <% end %>
-  </ul>
+<div class="row">
+	<button type="button" class="btn btn-default"><%= link_to 'Back to sermon list', media_path %></button>
+	<h2>A Sermon on <%= @medium.pillar.capitalize %></h2>
+	<div class="col-md-8 ">
+	<div class="panel panel-default">
+	  <div class="panel-heading"><h3><%= @medium.title %></h3></div>
+	  <div class="panel-body">
+	    <audio controls>
+	      <source src=<%= @medium.link %> type="audio/mpeg">
+	  	  Unfortunately, your browser does not support the audio element.
+		</audio>
+	  </div>
+	</div>	
+	</div>
+	<div class="col-md-4">
+	<div class="panel panel-default">
+	  <div class="panel-heading">
+	    <h3>More sermons on <%= @medium.pillar.upcase %></h3>
+	  </div>
+	  <div class="panel-body">
+	    <ul class="list-group">
+	  	<% @media.each do |medium| %>
+	      <li class="list-group-item"><h4><%= link_to medium.title + ": a sermon on " + medium.pillar.upcase, medium  %></h4></li>
+	  	<% end %>
+	    </ul>
+	  </div>
+	</div>
 </div>
