--- a/app/views/media/show.html.erb
+++ b/app/views/media/show.html.erb
@@ -20,7 +20,7 @@
 	  <div class="panel-body">
 	    <ul class="list-group">
 	  	<% @media.each do |medium| %>
-	      <li class="list-group-item"><h4><%= link_to medium.title + ": a sermon on " + medium.pillar.upcase, medium  %></h4></li>
+	      <li class="list-group-item"><h4><%= link_to medium.title + ": a sermon on " + medium.pillar_as_title, medium  %></h4></li>
 	  	<% end %>
 	    </ul>
 	  </div>
